# yolo2lidar

./: CMakeLists.txt  README.md  package.xml
config/: traffic_sign.yaml  v2_test.yaml  yolov3_lidar.yaml
darknet/cfg/: yolov4.cfg
darknet/data/: obj.data  train.txt  valid.txt
darknet/src/: image_interface.h
include/: yolo2lidar.h
launch/: darknet_ros_gaussian.launch  darknet_ros_v2.launch  test.launch
src/: main.cpp  yolo2lidar.cpp
yolo_network_config/cfg/: Gaussian_yolov3_BDD.cfg  traffic_sign.cfg  v2_test.cfg  yolo-obj.cfg
